--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.8.5",
     "@react-navigation/stack": "^5.12.2",
     "easy-peasy": "^4.0.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
-    "react-native-masonry-list": "^2.16.1",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.13.0",
     "react-native-vector-icons": "^7.1.0"
