--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.8.5",
     "@react-navigation/stack": "^5.12.2",
+    "axios": "^0.21.1",
     "easy-peasy": "^4.0.1",
     "react": "16.13.1",
+    "react-hook-form": "^7.9.0",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-paper": "^4.7.2",
@@ -24,6 +26,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.13.0",
+    "react-native-snackbar": "^2.4.0",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
