--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "16.13.1",
     "react-hook-form": "^7.9.0",
     "react-native": "0.63.3",
+    "react-native-actions-sheet": "^0.4.9",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-picker": "^4.0.4",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.2",
