--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.13.0",
+    "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-snackbar": "^2.4.0",
     "react-native-vector-icons": "^7.1.0"
   },
