--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "^2.13.0",
     "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-snackbar": "^2.4.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
