--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.1.8",
+    "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "^2.13.0",
     "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-snackbar": "^2.4.0",
