--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,7 +132,7 @@ android {
         applicationId "com.northernbreeze.kulture"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         multiDexEnabled true 
     }
@@ -152,7 +152,7 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file(MYAPP_RELEASE_STORE_FILE)
+            storeFile file('my-release-key.keystore')
             storePassword MYAPP_RELEASE_STORE_PASSWORD
             keyAlias MYAPP_RELEASE_KEY_ALIAS
             keyPassword MYAPP_RELEASE_KEY_PASSWORD
