--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.9.0",
     "react-native": "0.63.3",
     "react-native-actions-sheet": "^0.4.9",
+    "react-native-device-info": "^8.1.4",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "^4.0.4",
     "react-native-paper": "^4.7.2",
