--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/stack": "^5.12.2",
     "axios": "^0.21.1",
     "easy-peasy": "^4.0.1",
+    "lottie-ios": "3.2.3",
+    "lottie-react-native": "^4.0.3",
     "react": "16.13.1",
     "react-hook-form": "^7.9.0",
     "react-native": "0.63.3",
