--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-snackbar": "^2.4.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-video": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
