--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/netinfo": "^6.0.0",
     "@react-native-firebase/analytics": "^12.4.0",
     "@react-native-firebase/app": "^12.4.0",
+    "@react-native-firebase/dynamic-links": "^12.5.0",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.8.5",
     "@react-navigation/stack": "^5.12.2",
@@ -28,6 +29,7 @@
     "react-native-actions-sheet": "^0.4.9",
     "react-native-device-info": "^8.1.4",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.0.4",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.1",
@@ -39,7 +41,8 @@
     "react-native-snackbar": "^2.4.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-video": "^5.1.1"
+    "react-native-video": "^5.1.1",
+    "socket.io-client": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
