--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/app": "^12.4.0",
     "@react-native-firebase/dynamic-links": "^12.5.0",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
+    "@react-navigation/material-top-tabs": "5.3.15",
     "@react-navigation/native": "^5.8.5",
     "@react-navigation/stack": "^5.12.2",
     "axios": "^0.21.1",
@@ -31,6 +32,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.0.4",
+    "react-native-pager-view": "^5.4.0",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.2",
@@ -40,6 +42,7 @@
     "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-snackbar": "^2.4.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.1",
     "socket.io-client": "^4.1.3"
