--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.63.3",
     "react-native-actions-sheet": "^0.4.9",
     "react-native-device-info": "^8.1.4",
+    "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.0.4",
