--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/netinfo": "^6.0.0",
     "@react-native-firebase/analytics": "^12.4.0",
     "@react-native-firebase/app": "^12.4.0",
+    "@react-native-seoul/masonry-list": "^1.3.0",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/material-top-tabs": "5.3.15",
     "@react-navigation/native": "^5.8.5",
