--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/netinfo": "^6.0.0",
     "@react-native-firebase/analytics": "^12.4.0",
     "@react-native-firebase/app": "^12.4.0",
+    "@react-native-firebase/messaging": "^15.2.0",
     "@react-native-seoul/masonry-list": "^1.3.0",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/material-top-tabs": "5.3.15",
@@ -22,6 +23,7 @@
     "@react-navigation/stack": "^5.12.2",
     "@sentry/react-native": "^4.2.2",
     "axios": "^0.21.1",
+    "date-fns": "^2.29.1",
     "easy-peasy": "^4.0.1",
     "lottie-ios": "3.2.3",
     "lottie-react-native": "^4.0.3",
@@ -33,6 +35,7 @@
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-icon-badge": "^1.1.3",
     "react-native-image-picker": "^4.0.4",
     "react-native-logs": "^5.0.1",
     "react-native-pager-view": "^5.4.0",
