--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,5 +34,9 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+
+        maven {
+            url "https://sdk.smartlook.com/android/release"
+        }
     }
 }
