--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.1",
+    "smartlook-react-native-wrapper": "^1.2.8",
     "socket.io-client": "^4.1.3",
     "typescript": "^4.7.4"
   },
