--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -125,6 +125,8 @@ def enableHermes = project.ext.react.get("enableHermes", false);
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
+    ndkVersion '21.1.6528147'
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
